# specnorm

./: .gitignore  LICENSE  README.md  pyproject.toml
specnorm/: __init__.py  cli.py  fitters.py  gui.py  io.py  plotting.py  spectrum.py  writer.py
