[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "specnorm"
version = "0.9.0"
description = "Interactive continuum normalization for HST/STIS, HST/COS, and generic astronomical spectra"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "David M. French", email = "dfrench@stsci.edu" }]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "astropy>=5.0",
]

[project.scripts]
specnorm = "specnorm.cli:main"

[tool.setuptools]
packages = ["specnorm"]
